# synexis

./: .env.example  .gitignore  AGENTS.md  DECISIONS.bootstrap-local-first.md  DECISIONS.bootstrap.md  DECISIONS.openrouter-summary.md  DECISIONS.rag-langchain.md  DECISIONS.web-ui.md  Dockerfile  README.md  STATE.bootstrap-local-first.md  STATE.bootstrap.md  STATE.openrouter-summary.md  STATE.rag-langchain.md  STATE.web-ui.md  TODO.bootstrap-local-first.md  TODO.bootstrap.md  TODO.openrouter-summary.md  TODO.rag-langchain.md  TODO.web-ui.md  config.yaml.example  docker-compose.yml  pyproject.toml  rag.nlspec.md  render.yml  synexis.nlspec.md
.agents/: _NLSPEC.md  _STATE.md  _TODO.md
.agents/skills/adr/: SKILL.md
.agents/skills/architect/: SKILL.md
.agents/skills/architect-security/: SKILL.md
.agents/skills/coder/: SKILL.md
.agents/skills/doc/: SKILL.md
.agents/skills/governance/: SKILL.md
.agents/skills/nlspec/: SKILL.md
.agents/skills/planner/: SKILL.md
.agents/skills/preflight/: SKILL.md
.agents/skills/qa/: SKILL.md
.agents/skills/release/: SKILL.md
.agents/skills/review/: SKILL.md
.agents/skills/security/: SKILL.md
.agents/skills/triage/: SKILL.md
data/qdrant/: raft_state.json
data/tantivy/: meta.json
docker/: start-web.sh
docs/architecture/: README.md  c1-context.md  c2-container.md  c3-component.md  data-flow.md  dependencies.md  deployment.md  security-architecture.md  system-boundaries.md
docs/governance/: constitution.md  skill-contracts.md
docs/governance/adr/: 0000-template.md  0001-dot-pipeline-runner-contract.md  0002-chunking-by-heading.md  0003-read-only-exocortex-boundary.md  0004-qdrant-vector-store.md  0005-hybrid-scoring-policy.md  ADR-0002-local-web-ui-surface.md
scripts/: ingest.sh  install-hooks.sh  query.sh
src/rag/: __init__.py  cli.py  config.py
src/rag/api/: __init__.py  server.py
src/rag/chunking/: __init__.py  splitters.py
src/rag/embeddings/: __init__.py  factory.py
src/rag/generation/: __init__.py  chain.py  prompts.py
src/searchctl/: __init__.py  chunking.py  cli.py  config.py  document_map.py  embeddings.py  fs_scanner.py  fusion.py  hashing.py  inspect.py  llm_openrouter.py  logging.py  prompts.py  snippets.py  summary.py  web.py
synexis_brain/: __init__.py  config.py
synexis_brain/indexer/: incremental.py  markdown.py  metadata.py  pipeline.py  scan.py
synexis_brain/pipelines/: hello.dot  index.dot  search.dot
synexis_brain/search/: backends.py  bm25.py  bm25_tantivy.py  hybrid.py  nlu.py  vector.py
synexis_brain/tui/: __init__.py  app.py  backend.py
tests/: test_bm25_backend_selection.py  test_bm25_query_normalization.py  test_chunking_offsets.py  test_cli_search_readable.py  test_cli_summary_sources.py  test_config_llm.py  test_document_map.py  test_e2e_ingest_search.py  test_generation.py  test_hybrid_merge.py  test_incremental_hashing.py  test_incremental_indexing.py  test_ingestion.py  test_metadata_schema.py  test_nlu_filters.py  test_openrouter_prompting.py  test_pipeline_runner.py  test_qdrant_point_id.py  test_retrieval.py  test_rrf_fusion.py  test_tui_async_search.py  test_tui_backend.py  test_vector_cache.py  test_web.py
tests/fixtures/: doc1.md  doc2.txt  doc3.md  qa_pairs.json
(+33 files in other folders)
