[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-search"
version = "0.1.0"
description = "Local personal search engine (NLSpec v1)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12,<1",
  "pyyaml>=6.0",
  "pydantic>=2.6",
  "opensearch-py>=2.4",
  "qdrant-client>=1.9",
  "sentence-transformers>=2.7",
  "numpy>=1.26",
  "pymupdf>=1.24",
  "pdfminer.six>=20231228",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
searchctl = "searchctl.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
