[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "searchctl"
version = "0.1.0"
description = "Local personal search engine (NLSpec v1)"
readme = "README.md"
requires-python = ">=3.14, <4"
dependencies = [
  "typer>=0.12,<1",
  "pyyaml>=6.0",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "fastapi>=0.115,<1",
  "uvicorn>=0.30,<1",
  "opensearch-py>=2.4",
  "qdrant-client>=1.9",
  "numpy>=1.26",
  "pymupdf>=1.24",
  "pdfminer.six>=20231228",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
local-embeddings = [
  "sentence-transformers>=2.7",
]
rag = [
  "langchain>=0.3,<0.4",
  "langchain-core>=0.3,<0.4",
  "langchain-community>=0.3,<0.4",
  "langchain-openai>=0.3,<0.4",
  "langchain-chroma>=0.2,<0.3",
  "langchain-text-splitters>=0.3,<0.4",
  "chromadb>=0.5,<1",
]

[project.scripts]
searchctl = "searchctl.cli:app"
ragctl = "rag.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"searchctl.metadata" = ["schema.sql"]
"searchctl" = ["assets/*.html", "assets/*.css", "assets/*.js"]

[tool.pytest.ini_options]
pythonpath = ["src"]
